--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "eleventy"
   },
   "keywords": [],
-  "author": "",
+  "author": "Chris Eisenbraun",
   "license": "ISC",
   "devDependencies": {
     "@11ty/eleventy": "^1.0.1"
